+++++++++++
Python News
+++++++++++

(editors: check NEWS.help for information about editing NEWS using ReST.)

What's New in Python 2.5.1c1?
=============================

*Release date: XX-XXX-XXXX*

Core and builtins
-----------------

- Bug #1377858: Fix the segfaulting of the interpreter when an object created
  a weakref on itself during a __del__ call for new-style classes (classic
  classes still have the bug).

- Bug #1648179:  set.update() did not recognize an overridden __iter__ 
  method in subclasses of dict.

- Bug #1579370: Make PyTraceBack_Here use the current thread, not the
  frame's thread state.

- patch #1630975: Fix crash when replacing sys.stdout in sitecustomize.py

- Bug #1637022: Prefix AST symbols with _Py_.

- Prevent seg fault on shutdown which could occur if an object
  raised a warning.

- Bug #1566280: Explicitly invoke threading._shutdown from Py_Main,
  to avoid relying on atexit.

- Bug #1590891: random.randrange don't return correct value for big number

- Bug #1456209: In some obscure cases it was possible for a class with a
  custom ``__eq__()`` method to confuse set internals when class instances
  were used as a set's elements and the ``__eq__()`` method mutated the set.

- The repr for self-referential sets and fronzensets now shows "..." instead
  of falling into infinite recursion.

- Eliminated unnecessary repeated calls to hash() by set.intersection() and
  set.symmetric_difference_update().

- Bug #1591996: Correctly forward exception in instance_contains().

- Bug #1588287: fix invalid assertion for `1,2` in debug builds.

- Bug #1576657: when setting a KeyError for a tuple key, make sure that
  the tuple isn't used as the "exception arguments tuple".  Applied to
  both sets and dictionaries.

- Bug #1565514, SystemError not raised on too many nested blocks.

- Bug #1576174: WindowsError now displays the windows error code
  again, no longer the posix error code.

- Patch #1549049: Support long values in structmember.
