@@ -12,6 +12,8 @@ What's New in Python 2.5.1c1?
 Core and builtins
 -----------------
 
+- SF #151204:  enumerate() now raises an Overflow error at sys.maxint items.
+
 - Bug #1377858: Fix the segfaulting of the interpreter when an object created
   a weakref on itself during a __del__ call for new-style classes (classic
   classes still have the bug).
@@ -102,6 +104,8 @@ Core and builtins
 
 Extension Modules
 -----------------
+
+- operator.count() now raises an OverflowError when the count reaches sys.maxint.
 
 - Bug #1575169: operator.isSequenceType() now returns False for subclasses of dict.
 
